[Chromoting] A quick fix of bug 637087

IpcVideoFrameCapturer may be released before DesktopSessionAgent returns a
frame, so we should check before calling
IpcVideoFrameCapturer::OnCaptureResult() function.

BUG=637087

Review-Url: https://codereview.chromium.org/2238853003
Cr-Commit-Position: refs/heads/master@{#411929}

Former-commit-id: 7f1e89c1582b6f936cd858e950ea9f2dce3e8a6a